finish intro desktop version

--- a/src/App.sass
+++ b/src/App.sass
@@ -23,3 +23,9 @@ body
 .h2
   font-size: 50px
   line-height: 50px
+
+.gradient-bg
+  background: $primary-gradient
+
+.dark-bg
+  background-color: $dark
