--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -18,3 +18,15 @@
 
 .left0
   left: 0
+
+.flex
+  display: flex
+
+.dir-column
+  flex-direction: column
+
+.align-center
+  align-items: center
+
+.mb-50
+  margin-bottom: 50px
