--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -1,6 +1,6 @@
 //COLORS
 $light: #fff
 $dark: #03334e
-$primary: #7cd7b9
-$secondary: #7fd9ba
-$primary-gradient: linear-gradient($primary, $secondary)
+$primary: #45BBB0
+$secondary: #7FD9BA
+$primary-gradient: linear-gradient($secondary, $primary)
