--- a/src/components/common/Button/button.sass
+++ b/src/components/common/Button/button.sass
@@ -6,8 +6,10 @@ $height: 59px
   position: relative
   height: $height
   width: 136px
+  cursor: pointer
 
   &__content
+    transition: border-color .5s ease, color .5s ease
     position: relative
     display: block
     width: 100%
@@ -21,6 +23,7 @@ $height: 59px
     z-index: 1
 
   &__background
+    transition: opacity .5s ease
     position: absolute
     top: 6px
     left: 6px
@@ -28,3 +31,14 @@ $height: 59px
     height: 100%
     background: $primary-gradient
     z-index: 0
+    opacity: 1
+  
+  &:hover
+    .button__content
+      transition: all .5s ease
+      border-color: $primary
+      color: $primary
+
+    .button__background
+      transition: opacity .5s ease
+      opacity: 0
