--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -28,5 +28,11 @@
 .align-center
   align-items: center
 
+.align-start
+  align-items: flex-start
+
+.justify-center
+  justify-content: center
+
 .mb-50
   margin-bottom: 50px
