fix responsive positioning of headlines

--- a/src/components/content/Elements/elements.sass
+++ b/src/components/content/Elements/elements.sass
@@ -14,13 +14,13 @@
       
       .elements__description
         padding-left: 0
-        padding-right: 7vw
+        padding-right: 100px
 
   &__image
     width: 36vw
   
   &__description
-    padding-left: 7vw
+    padding-left: 100px
   
   &__title
     top: 60px
