--- a/src/App.sass
+++ b/src/App.sass
@@ -27,5 +27,8 @@ body
 .gradient-bg
   background: $primary-gradient
 
+.gradient-bg-h
+  background: $primary-gradient-h
+
 .dark-bg
   background-color: $dark
