--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -5,3 +5,4 @@ $dark: #03334e
 $primary: #45BBB0
 $secondary: #7FD9BA
 $primary-gradient: linear-gradient($secondary, $primary)
+$primary-gradient-h: linear-gradient(-90deg, $secondary, $primary)
