--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -6,3 +6,7 @@ $primary: #45BBB0
 $secondary: #7FD9BA
 $primary-gradient: linear-gradient($secondary, $primary)
 $primary-gradient-h: linear-gradient(-90deg, $secondary, $primary)
+
+//DEVICES
+$tablet: 959px
+$phone: 639px
