--- a/src/App.sass
+++ b/src/App.sass
@@ -17,12 +17,12 @@ body
   font-family: 'Playfair Display', serif
 
 .h1
-  font-size: 63px
-  line-height: 80px
+  font-size: min(63px, max(4.375vw, 35px))
+  line-height: 1.25
 
 .h2
-  font-size: 50px
-  line-height: 50px
+  font-size: min(50px, max(3.48vw, 35px))
+  line-height: 1
 
 .gradient-bg
   background: $primary-gradient
