add navigation functionality and mobile version

--- a/src/components/content/Elements/elements.sass
+++ b/src/components/content/Elements/elements.sass
@@ -1,11 +1,12 @@
 @import './../../../styles/variables'
 
 .elements
-  padding: 150px 9vw 0
+  padding: 0 9vw
+  margin-bottom: 200px
 
   &__item
     display: flex
-    margin-bottom: 150px
+    padding-top: 150px
 
     &--reverse
       flex-direction: row-reverse
@@ -13,21 +14,21 @@
       .elements__title
         margin-left: auto
         margin-right: -158px
-      
+
       .elements__description
         padding-left: 0
         padding-right: 100px
 
   &__image
     width: 36vw
-  
+
   &__description
     padding-left: 100px
-  
+
   &__title
     top: 60px
     margin-left: -158px
-  
+
   &__text
     margin-top: 30px
     margin-bottom: 40px
