add better gradient to header

--- a/src/App.sass
+++ b/src/App.sass
@@ -30,6 +30,9 @@ body
 .gradient-bg
   background: $primary-gradient
 
+.gradient-bg-2
+  background: $primary-gradient-2
+
 .gradient-bg-h
   background: $primary-gradient-h
 
