--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -2,9 +2,11 @@
 $black: #000
 $light: #fff
 $dark: #03334e
-$primary: #45BBB0
+$primary: #25ABAA
 $secondary: #7FD9BA
-$primary-gradient: linear-gradient($secondary, $primary)
+$highlight: #C0FEC8
+$primary-gradient: linear-gradient($primary, $secondary)
+$primary-gradient-2: linear-gradient($primary, $highlight)
 $primary-gradient-h: linear-gradient(-90deg, $secondary, $primary)
 
 //DEVICES
